Editar funciona con la nueva fecha

--- a/src/AppBeacon/app/src/main/res/layout/popeditarusuario.xml
+++ b/src/AppBeacon/app/src/main/res/layout/popeditarusuario.xml
@@ -14,7 +14,7 @@
             android:id="@+id/textView40"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/montserrat"
             android:text="Editar Usuario"
             android:textColor="@color/teal_700"
@@ -51,30 +51,29 @@
             android:id="@+id/textViewTelefonoEditar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Teléfono:"
             android:textColor="#024A44"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/editTextEdadEditar"
-            app:layout_constraintTop_toBottomOf="@+id/editTextEdadEditar" />
+            app:layout_constraintStart_toStartOf="@+id/etEdadEditar"
+            app:layout_constraintTop_toBottomOf="@+id/etEdadEditar" />
 
-        <EditText
-            android:id="@+id/editTextEdadEditar"
+        <DatePicker
+            android:id="@+id/etEdadEditar"
             android:layout_width="wrap_content"
-            android:layout_height="31dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/register"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:paddingStart="5dp"
-            app:layout_constraintStart_toStartOf="@+id/textViewEdadEditar"
+            android:layout_height="300px"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewEdadEditar" />
 
         <TextView
             android:id="@+id/textViewEdadEditar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Edad:"
             android:textColor="#024A44"
             android:textStyle="bold"
@@ -97,7 +96,7 @@
             android:id="@+id/textViewMailEditar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Mail:"
             android:textColor="#024A44"
             android:textStyle="bold"
@@ -108,7 +107,7 @@
             android:id="@+id/textViewApellidosEditar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Apellidos:"
             android:textColor="#024A44"
             android:textStyle="bold"
@@ -120,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:text="Nombre:"
             android:textColor="#024A44"
             android:textStyle="bold"
@@ -143,7 +142,7 @@
             android:id="@+id/textViewAntiguaContra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Antigua Contraseña:"
             android:textColor="#024A44"
             android:textStyle="bold"
@@ -168,7 +167,7 @@
             android:id="@+id/textViewNuevaContra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Nueva Contraseña:"
             android:textColor="#024A44"
             android:textStyle="bold"
@@ -193,7 +192,7 @@
             android:id="@+id/textViewReNuevaContra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="Repite Nueva Contraseña:"
             android:textColor="#024A44"
             android:textStyle="bold"
@@ -218,8 +217,8 @@
             android:id="@+id/btnRegistro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:text="Guardar Cambios"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextReContraEditar" />
@@ -229,6 +228,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:layout_marginStart="24dp"
             android:gravity="center"
             android:padding="10px"
             android:text="X"
@@ -245,7 +245,7 @@
             android:id="@+id/switch2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:text="¿Quieres cambiar tu contraseña?"
             app:layout_constraintStart_toStartOf="@+id/etTelefonoRegis"
             app:layout_constraintTop_toBottomOf="@+id/etTelefonoRegis" />
