Publicar Datos Privados

--- a/src/AppBeacon/app/src/main/res/layout/activity_register.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_register.xml
@@ -157,7 +157,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Edad:"
+            android:text="Fecha de Nacimiento:"
             android:textColor="#024A44"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/etMailRegis"
