--- a/src/AppBeacon/app/src/main/res/layout/fragment_mapa.xml
+++ b/src/AppBeacon/app/src/main/res/layout/fragment_mapa.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/maaapa">
+    android:layout_height="match_parent">
 
     <WebView
         android:id="@+id/webview"
