--- a/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones_semanal.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones_semanal.xml
@@ -11,21 +11,22 @@
         android:id="@+id/textView15"
         android:layout_width="71dp"
         android:layout_height="25dp"
+        android:layout_marginBottom="4dp"
         android:fontFamily="@font/montserrat"
         android:text="ug/m3"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/graph"
+        app:layout_constraintBottom_toTopOf="@+id/graphSemanal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
+        android:id="@+id/graphSemanal"
         android:layout_width="0dp"
         android:layout_height="387dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="95dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,15 +34,18 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="45dp"
+        android:layout_width="275dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="15dp"
         android:fontFamily="@font/montserrat"
-        android:text="Historial de Mediciones 24h"
+        android:text="Historial de Mediciones Semanal"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,13 +55,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/montserrat"
-        android:text="Horas"
+        android:text="Dias"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/graph" />
+        app:layout_constraintTop_toBottomOf="@+id/graphSemanal" />
 
     <Button
         android:id="@+id/buttonSemanal"
@@ -66,12 +70,12 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="55dp"
         android:backgroundTint="#09275C"
-        android:text="Historial semanal"
+        android:text="Historial 24h"
         android:textAllCaps="false"
         android:textSize="12sp"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/graphSemanal" />
 
     <Button
         android:id="@+id/buttonMensual"
@@ -85,6 +89,6 @@
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        app:layout_constraintTop_toBottomOf="@+id/graphSemanal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
