--- a/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones_mensual.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones_mensual.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cdet"
+    android:background="#F0F8FF"
     android:orientation="vertical">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginBottom="4dp"
         android:fontFamily="@font/montserrat"
         android:text="ug/m3"
-        android:textColor="#FFFFFF"
+        android:textColor="#5f9ea0"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/graphMensual"
@@ -26,8 +26,12 @@
         android:id="@+id/graphMensual"
         android:layout_width="0dp"
         android:layout_height="387dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="55dp"
+        android:layout_marginEnd="15dp"
         android:orientation="vertical"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -39,8 +43,8 @@
         android:layout_marginTop="45dp"
         android:fontFamily="@font/montserrat"
         android:text="Historial de Mediciones  Mensual"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textColor="#5f9ea0"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +57,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/montserrat"
         android:text="Dias"
-        android:textColor="#FFFFFF"
+        android:textColor="#5f9ea0"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
