--- a/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cdet"
+    android:background="#F0F8FF"
     android:orientation="vertical">
 
     <TextView
@@ -13,7 +13,7 @@
         android:layout_height="25dp"
         android:fontFamily="@font/montserrat"
         android:text="ug/m3"
-        android:textColor="#FFFFFF"
+        android:textColor="#5f9ea0"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/graph"
@@ -25,7 +25,9 @@
         android:id="@+id/graph"
         android:layout_width="0dp"
         android:layout_height="387dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="55dp"
+        android:layout_marginEnd="15dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +40,7 @@
         android:layout_marginTop="45dp"
         android:fontFamily="@font/montserrat"
         android:text="Historial de Mediciones 24h"
-        android:textColor="#FFFFFF"
+        android:textColor="#5f9ea0"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +54,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/montserrat"
         android:text="Horas"
-        android:textColor="#FFFFFF"
+        android:textColor="#5f9ea0"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
