--- a/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones_semanal.xml
+++ b/src/AppBeacon/app/src/main/res/layout/activity_historial_mediciones_semanal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cdet"
+    android:background="#F0F8FF"
     android:orientation="vertical">
 
     <TextView
@@ -14,7 +14,7 @@
         android:layout_marginBottom="4dp"
         android:fontFamily="@font/montserrat"
         android:text="ug/m3"
-        android:textColor="#FFFFFF"
+        android:textColor="#5f9ea0"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/graphSemanal"
@@ -26,7 +26,9 @@
         android:id="@+id/graphSemanal"
         android:layout_width="0dp"
         android:layout_height="387dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="95dp"
+        android:layout_marginEnd="15dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,15 +36,15 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="275dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="25dp"
+        android:layout_width="305dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="10dp"
         android:fontFamily="@font/montserrat"
         android:text="Historial de Mediciones Semanal"
-        android:textColor="#FFFFFF"
-        android:textSize="24sp"
+        android:textColor="#5f9ea0"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -56,7 +58,7 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/montserrat"
         android:text="Dias"
-        android:textColor="#FFFFFF"
+        android:textColor="#5f9ea0"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
